adding library to debug databse from the browser

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
 
 // Testing
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
